--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export": "next build && next export -o ./dist",
-    "test": "jest"
+    "export": "next build && next export -o ./dist"
   },
   "dependencies": {
     "@mapbox/rehype-prism": "^0.6.0",
@@ -28,11 +27,8 @@
     "schema-dts": "^0.8.2"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.22",
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
-    "jest": "^26.6.3",
-    "ts-jest": "^26.5.4",
     "typescript": "^4.2.3",
     "yaml-loader": "^0.6.0"
   }
