--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
+    "prettier": "^2.3.0",
     "typescript": "^4.2.3",
     "yaml-loader": "^0.6.0"
   }
