--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export": "next build && next export -o ./dist"
+    "export": "next build && next export -o ./dist",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@mapbox/rehype-prism": "^0.6.0",
@@ -16,6 +17,7 @@
     "gray-matter": "^4.0.2",
     "js-yaml": "^4.0.0",
     "next": "10.1.2",
+    "next-images": "^1.8.4",
     "next-mdx-remote": "^2.1.3",
     "normalize.css": "^8.0.1",
     "react": "17.0.2",
