--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "schema-dts": "^0.8.2"
   },
   "devDependencies": {
+    "patch-package": "^6.4.7",
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
     "prettier": "^2.3.0",
