--- a/package.json
+++ b/package.json
@@ -28,10 +28,13 @@
     "schema-dts": "^0.8.2"
   },
   "devDependencies": {
-    "patch-package": "^6.4.7",
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
+    "autoprefixer": "^10.4.7",
+    "patch-package": "^6.4.7",
+    "postcss": "^8.4.14",
     "prettier": "^2.3.0",
+    "tailwindcss": "^3.0.24",
     "typescript": "^4.2.3",
     "yaml-loader": "^0.6.0"
   }
