--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "my-app",
+  "name": "idkshite-blog",
   "version": "0.1.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "export": "next build && next export -o ./dist",
     "postinstall": "patch-package"
   },
   "dependencies": {
