add favourite-debugging-method post

--- a/meta/tags.yml
+++ b/meta/tags.yml
@@ -5,3 +5,7 @@ tags:
     name: meta-learning
   - slug: learn-in-public
     name: learn in public
+  - slug: debugging
+    name: debugging
+  - slug: programming
+    name: programming
