--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "date-fns": "^2.19.0",
     "gray-matter": "^4.0.2",
     "js-yaml": "^4.0.0",
-    "next": "10.1.2",
+    "next": "11.1.4",
     "next-images": "^1.8.4",
     "next-mdx-remote": "3.0.8",
     "normalize.css": "^8.0.1",
@@ -24,6 +24,7 @@
     "react-dom": "17.0.2",
     "react-schemaorg": "^1.3.1",
     "react-twitter-embed": "4.0.4",
+    "react-use": "^17.4.0",
     "react-youtube": "^7.13.1",
     "schema-dts": "^0.8.2"
   },
