--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-twitter-embed": "4.0.4",
     "react-use": "^17.4.0",
     "react-youtube": "^7.13.1",
+    "remark-prism": "^1.3.6",
     "schema-dts": "^0.8.2"
   },
   "devDependencies": {
