--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mapbox/rehype-prism": "^0.6.0",
     "@svgr/webpack": "^5.5.0",
     "@types/js-yaml": "^4.0.0",
+    "axios": "^0.27.2",
     "date-fns": "^2.19.0",
     "gray-matter": "^4.0.2",
     "js-yaml": "^4.0.0",
