--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "date-fns": "^2.19.0",
     "gray-matter": "^4.0.2",
     "js-yaml": "^4.0.0",
+    "lodash.flattendeep": "^4.4.0",
+    "mdast-util-from-markdown": "^1.2.0",
+    "mdast-util-mdx": "^2.0.0",
+    "micromark-extension-mdxjs": "^1.0.0",
     "next": "11.1.4",
     "next-images": "^1.8.4",
     "next-mdx-remote": "3.0.8",
