--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mapbox/rehype-prism": "^0.6.0",
+    "@notionhq/client": "^1.0.4",
     "@svgr/webpack": "^5.5.0",
     "@types/js-yaml": "^4.0.0",
     "axios": "^0.27.2",
