--- a/meta/tags.yml
+++ b/meta/tags.yml
@@ -11,7 +11,11 @@ tags:
     name: Programming
   - slug: javascript
     name: JavaScript
+  - slug: react
+    name: React
   - slug: csharp
     name: C#
+  - slug: css
+    name: CSS
   - slug: godot
     name: Godot Engine
