change base url to fix canonical url and other meta tags Thansk to @architchandra

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "base_url": "https://idkshite.com/",
+  "base_url": "https://idkshite.com",
   "site_title": "I don't know shite | Blog",
   "site_description": "Learn some shite with me",
   "site_keywords": [
