--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@notionhq/client": "^1.0.4",
     "@svgr/webpack": "^5.5.0",
     "@types/js-yaml": "^4.0.0",
-    "axios": "^0.27.2",
+    "axios": "1.6.0",
     "date-fns": "^2.19.0",
     "gray-matter": "^4.0.2",
     "js-yaml": "^4.0.0",
@@ -23,15 +23,15 @@
     "mdast-util-from-markdown": "^1.2.0",
     "mdast-util-mdx": "^2.0.0",
     "micromark-extension-mdxjs": "^1.0.0",
-    "next": "11.1.4",
+    "next": "14.2.5",
     "next-images": "^1.8.4",
     "next-mdx-remote": "3.0.8",
     "normalize.css": "^8.0.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-schemaorg": "^1.3.1",
     "react-twitter-embed": "4.0.4",
-    "react-use": "^17.4.0",
+    "react-use": "^17.5.1",
     "react-youtube": "^7.13.1",
     "remark-prism": "^1.3.6",
     "schema-dts": "^0.8.2"
@@ -41,7 +41,7 @@
     "@types/react": "^17.0.3",
     "autoprefixer": "^10.4.7",
     "patch-package": "^6.4.7",
-    "postcss": "^8.4.14",
+    "postcss": "^8.4.40",
     "prettier": "^2.3.0",
     "tailwindcss": "^3.1.2",
     "typescript": "^4.2.3",
