render sanity post title and subtitle and basic metadata as post

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mapbox/rehype-prism": "^0.6.0",
     "@netlify/plugin-nextjs": "^4.29.1",
     "@notionhq/client": "^1.0.4",
+    "@sanity/image-url": "^1.0.2",
     "@svgr/webpack": "^5.5.0",
     "@types/js-yaml": "^4.0.0",
     "axios": "1.6.0",
@@ -26,6 +27,7 @@
     "next": "14.2.5",
     "next-images": "^1.8.4",
     "next-mdx-remote": "3.0.8",
+    "next-sanity": "^9.4.3",
     "normalize.css": "^8.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
