--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "@mapbox/rehype-prism": "^0.6.0",
     "@netlify/plugin-nextjs": "^4.29.1",
     "@notionhq/client": "^1.0.4",
-    "@svgr/webpack": "^5.5.0",
+    "@svgr/webpack": "^8.1.0",
     "@types/js-yaml": "^4.0.0",
-    "axios": "^0.27.2",
+    "axios": "^1.8.2",
     "date-fns": "^2.19.0",
     "gray-matter": "^4.0.2",
     "js-yaml": "^4.0.0",
@@ -23,22 +23,23 @@
     "mdast-util-from-markdown": "^1.2.0",
     "mdast-util-mdx": "^2.0.0",
     "micromark-extension-mdxjs": "^1.0.0",
-    "next": "11.1.4",
+    "next": "^15.2.1",
     "next-images": "^1.8.4",
-    "next-mdx-remote": "3.0.8",
+    "next-mdx-remote": "^5.0.0",
     "normalize.css": "^8.0.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-schemaorg": "^1.3.1",
     "react-twitter-embed": "4.0.4",
     "react-use": "^17.4.0",
-    "react-youtube": "^7.13.1",
+    "react-youtube": "^10.1.0",
     "remark-prism": "^1.3.6",
     "schema-dts": "^0.8.2"
   },
   "devDependencies": {
     "@types/node": "^16.11.36",
-    "@types/react": "^17.0.3",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.4.7",
     "patch-package": "^6.4.7",
     "postcss": "^8.4.14",
