--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "@notionhq/client": "^1.0.4",
     "@svgr/webpack": "^8.1.0",
     "@types/js-yaml": "^4.0.0",
-    "axios": "^1.8.2",
+    "axios": "1.12.0",
     "date-fns": "^2.19.0",
     "gray-matter": "^4.0.2",
-    "js-yaml": "^4.0.0",
+    "js-yaml": "4.1.1",
     "lodash.flattendeep": "^4.4.0",
     "mdast-util-from-markdown": "^1.2.0",
     "mdast-util-mdx": "^2.0.0",
