--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
     "mdast-util-from-markdown": "^1.2.0",
     "mdast-util-mdx": "^2.0.0",
     "micromark-extension-mdxjs": "^1.0.0",
-    "next": "^15.2.1",
+    "next": "16.1.1",
     "next-images": "^1.8.4",
     "next-mdx-remote": "^5.0.0",
     "normalize.css": "^8.0.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
     "react-schemaorg": "^1.3.1",
     "react-twitter-embed": "4.0.4",
     "react-use": "^17.4.0",
@@ -38,14 +38,20 @@
   },
   "devDependencies": {
     "@types/node": "^16.11.36",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
+    "@types/react": "19.2.8",
+    "@types/react-dom": "19.2.3",
     "autoprefixer": "^10.4.7",
     "patch-package": "^6.4.7",
     "postcss": "^8.4.14",
     "prettier": "^2.3.0",
     "tailwindcss": "^3.1.2",
     "typescript": "^4.2.3",
-    "yaml-loader": "^0.6.0"
+    "yaml-loader": "^0.6.0",
+    "eslint": "^9",
+    "eslint-config-next": "16.1.1"
+  },
+  "overrides": {
+    "@types/react": "19.2.8",
+    "@types/react-dom": "19.2.3"
   }
 }
