--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,12 +16,12 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "incremental": false
   },
   "exclude": [
     "node_modules",
-   "netlify/**/*"
+    "netlify/**/*"
   ],
   "include": [
     "next-env.d.ts",
